@@ -1,9 +1,23 @@
-FROM adoptopenjdk/openjdk11:alpine-jre
+FROM amazoncorretto:17-alpine as build-jre
+WORKDIR /tmp/jre
+# required for strip-debug to work
+RUN apk add --no-cache binutils
+# Build small JRE image
+RUN jlink \
+         --add-modules ALL-MODULE-PATH \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output slim
 
-RUN apk update && apk add bash ca-certificates openssl
-
-COPY target/universal/ferload.tgz .
-
-RUN tar xvf ferload.tgz
-
-ENTRYPOINT ["/ferload/bin/ferload"]
+FROM alpine:latest
+WORKDIR /app
+ENV JAVA_HOME=/jre
+ENV JAVA_OPTS="-XX:+UseG1GC -XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0 -XshowSettings:vm -XX:+PrintCommandLineFlags"
+ENV PATH="$PATH:$JAVA_HOME/bin"
+RUN apk update && apk add ca-certificates openssl
+COPY --from=build-jre /tmp/jre/slim $JAVA_HOME
+COPY target/scala-3.3.1/ferload.jar .
+EXPOSE 9090
+ENTRYPOINT ["java", "-jar", "ferload.jar"]
